--- a/static/main.css
+++ b/static/main.css
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
 }
 
 /* Global button style */
@@ -14,7 +14,7 @@ body {
   text-decoration: none;
   outline: none;
   color: #ffffff;
-  background-color: rgb(0, 120, 212);
+  background-color: rgb(31 144 232);
   padding: 0.5rem 1.2rem;
   border-radius: 2px;
   font-size: 1rem;
@@ -22,7 +22,7 @@ body {
 }
 
 .button:hover {
-  background-color: rgb(16, 110, 190);
+  background-color: rgb(28 70 107);
 }
 
 .button.disabled {
@@ -44,6 +44,11 @@ body {
   font-size: 2.3rem;
   font-weight: 300;
   margin: 0.8rem 0;
+}
+
+.main p {
+  font-size: 10.5rem;
+  color: rgba(15, 15, 15, 0.918);
 }
 
 .hidden {
